style.css
/* STYLES */
body {
  margin: 0;
}

h1 {
  text-align: center;
}

.game {
  background-color: chocolate;
  padding: 2vw 2vh;
  /*margin: 5vw 3vh;*/
  width: 100vw;
  height: 100vh;
}

.instructions {
  display: none;
  position: absolute;
  height: 100%;
  z-index: 9;
  background-color: aqua;
}

#gameContainer {
  position: relative;
  width: 50vw;
  height: 35vh;
  background-color: aliceblue;
  margin: 100px auto;
  border: 1px solid #ccc;
  overflow: hidden;
}

#ground {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 3vh;
  background-color: darkolivegreen;
}

#ambience {
  position: absolute;
  top: 0;
  width: 100%;
  /* display: flex;
    gap: 3em */
}

#player {
  position: absolute;
  background-size: contain;
  background-repeat: no-repeat;
  bottom: 3vh;
  left: 10vw;
  width: 8vw;
  height: 5vw;
}

.run1 {
  background-image: url("./canvas/dog1.png");
}

.run2 {
  background-image: url("./canvas/dog2.png");
}

.run3 {
  background-image: url("./canvas/dog3.png");
}

.run4 {
  background-image: url("./canvas/dog4.png");
}

.run5 {
  background-image: url("./canvas/dog5.png");
}

.run6 {
  background-image: url("./canvas/dog6.png");
}

.run7 {
  background-image: url("./canvas/dog7.png");
}

.run8 {
  background-image: url("./canvas/dog8.png");
}

.run9 {
  background-image: url("./canvas/dog9.png");
}

#player.jump {
  animation: jumpAnimation 0.6s ease;
}

@keyframes jumpAnimation {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-12vh);
  }
  100% {
    transform: translateY(0);
  }
}

.cloud {
  position: absolute;
  background-image: url("./canvas/cloud.png");
  background-size: contain;
  background-repeat: no-repeat;
}

.big-cloud {
  right: -150px;
  width: 150px;
  height: 150px;
}

.small-cloud {
  width: 70px;
  height: 70px;
}

.medium-cloud {
  width: 110px;
  height: 110px;
}

.obstacle {
  position: absolute;
  background-image: url("./canvas/rock.png");
  background-size: contain;
  background-repeat: no-repeat;
  bottom: 3vh;
  right: -8vh;
  width: 5vw;
  height: 5vh;
  /* background-color: blueviolet; */
}

.collision-area {
  position: absolute;
  left: 12vw;
  bottom: 3vh;
  width: 5vw;

  height: 10vh;
  border: 1px solid aqua;
}

#score{
    position: absolute;
    top:0px;
    right:15px;
}

